--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 table {
-    width: 300px;
-    min-width: 300px;
     border-collapse: collapse;
+}
+
+#search-result {
+    width: 245px;
 }
 
 th, td {
@@ -28,10 +30,14 @@ tr:hover {
     color: inherit; /* Laisser la couleur héritée ou configurez une couleur explicite si nécessaire */
 }
 
+.hand-type {
+    text-align: center;
+    font-size: 20px;
+}
+
 .container {
     display: flex;
     gap: 20px;
-    margin: 20px;
 }
 
 #left-table-container {
@@ -41,14 +47,14 @@ tr:hover {
 
 #poker-table {
     border-collapse: collapse;
-    width: auto;
+    width: 100px;
     max-width: 300px; /* Optionnel : limiter la largeur */
 }
 
 #poker-table td {
     padding: 5px;
     text-align: center;
-    font-size: 14px;
+    font-size: 13px;
     color: #fff; /* Texte en blanc pour les cellules colorées */
     border: 1px solid #ddd;
     white-space: pre-wrap; /* Pour permettre les sauts de ligne dans les cellules */
